feat: Prefer local package files first